# cookiecutter-poetry

./: Makefile  README.md  cookiecutter.json  pyproject.toml  tox.ini
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: main.yml
docs/: index.md  prompt_arguments.md
docs/features/: codecov.md
hooks/: post_gen_project.py
tests/: test_cookiecutter.py
{{cookiecutter.project_name}}/: Makefile  mkdocs.yml  pyproject.toml  tox.ini
{{cookiecutter.project_name}}/.github/actions/setup-poetry-env/: action.yml
{{cookiecutter.project_name}}/.github/workflows/: main.yml
